--- a/FluentEvents.Azure.SignalR/FluentEvents.Azure.SignalR.csproj
+++ b/FluentEvents.Azure.SignalR/FluentEvents.Azure.SignalR.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\src\FluentEvents\FluentEvents.csproj" />
   </ItemGroup>
 
