--- a/src/FluentEvents.Azure.ServiceBus/FluentEvents.Azure.ServiceBus.csproj
+++ b/src/FluentEvents.Azure.ServiceBus/FluentEvents.Azure.ServiceBus.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageLicenseUrl>https://github.com/luca-esse/FluentEvents/blob/master/LICENSE</PackageLicenseUrl>
+    <Description>Azure ServiceBus plugin for FluentEvents event broadcasting</Description>
+    <PackageProjectUrl>https://github.com/luca-esse/FluentEvents</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
