--- a/src/FluentEvents/FluentEvents.csproj
+++ b/src/FluentEvents/FluentEvents.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Castle.Core" Version="4.3.1" />
     <PackageReference Include="AsyncEvent" Version="0.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
