--- a/src/FluentEvents.IntegrationTests/FluentEvents.IntegrationTests.csproj
+++ b/src/FluentEvents.IntegrationTests/FluentEvents.IntegrationTests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Moq" Version="4.10.0" />
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
+    <PackageReference Include="AsyncEvent" Version="0.2.0" />
   </ItemGroup>
 
   <ItemGroup>
