--- a/src/FluentEvents/FluentEvents.csproj
+++ b/src/FluentEvents/FluentEvents.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\Luca\Source\Repos\luca-esse\FluentEvents\src\FluentEvents\FluentEvents.xml</DocumentationFile>
+    <DocumentationFile>FluentEvents.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
