--- a/src/FluentEvents.EntityFrameworkCore.IntegrationTests/FluentEvents.EntityFrameworkCore.IntegrationTests.csproj
+++ b/src/FluentEvents.EntityFrameworkCore.IntegrationTests/FluentEvents.EntityFrameworkCore.IntegrationTests.csproj
@@ -1,19 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>7.3</LangVersion>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Moq" Version="4.10.0" />
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
+    <PackageReference Include="AsyncEvent" Version="0.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FluentEvents.EntityFrameworkCore\FluentEvents.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\FluentEvents.EntityFrameworkCore\FluentEvents.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\FluentEvents.IntegrationTests.Common\FluentEvents.IntegrationTests.Common.csproj" />
   </ItemGroup>
 
