--- a/src/FluentEvents.IntegrationTests.Common/FluentEvents.IntegrationTests.Common.csproj
+++ b/src/FluentEvents.IntegrationTests.Common/FluentEvents.IntegrationTests.Common.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>7.3</LangVersion>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
