--- a/src/FluentEvents.EntityFrameworkCore/FluentEvents.EntityFrameworkCore.csproj
+++ b/src/FluentEvents.EntityFrameworkCore/FluentEvents.EntityFrameworkCore.csproj
@@ -9,6 +9,10 @@
     <PackageProjectUrl>https://github.com/luca-esse/FluentEvents</PackageProjectUrl>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>FluentEvents.EntityFrameworkCore.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.2" />
   </ItemGroup>
