--- a/src/FluentEvents.Azure.ServiceBus/FluentEvents.Azure.ServiceBus.csproj
+++ b/src/FluentEvents.Azure.ServiceBus/FluentEvents.Azure.ServiceBus.csproj
@@ -9,6 +9,10 @@
     <PackageProjectUrl>https://github.com/luca-esse/FluentEvents</PackageProjectUrl>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>FluentEvents.Azure.ServiceBus.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.1.1" />
   </ItemGroup>
