--- a/src/FluentEvents.Azure.SignalR/FluentEvents.Azure.SignalR.csproj
+++ b/src/FluentEvents.Azure.SignalR/FluentEvents.Azure.SignalR.csproj
@@ -6,7 +6,12 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>FluentEvents.Azure.SignalR.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.1.0" />
   </ItemGroup>
 
