--- a/src/FluentEvents.IntegrationTests.Common/FluentEvents.IntegrationTests.Common.csproj
+++ b/src/FluentEvents.IntegrationTests.Common/FluentEvents.IntegrationTests.Common.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="AsyncEvent" Version="0.2.0" />
   </ItemGroup>
 
