--- a/src/FluentEvents.Azure.SignalR/FluentEvents.Azure.SignalR.csproj
+++ b/src/FluentEvents.Azure.SignalR/FluentEvents.Azure.SignalR.csproj
@@ -3,7 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
-    <IsPackable>false</IsPackable>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageLicenseUrl>https://github.com/luca-esse/FluentEvents/blob/master/LICENSE</PackageLicenseUrl>
+    <Description>A FluentEvents plugin that links events to Azure SignalR Service hub methods.</Description>
+    <PackageProjectUrl>https://github.com/luca-esse/FluentEvents</PackageProjectUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
