--- a/src/FluentEvents/FluentEvents.csproj
+++ b/src/FluentEvents/FluentEvents.csproj
@@ -5,8 +5,9 @@
     <LangVersion>7.3</LangVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseUrl>https://github.com/luca-esse/FluentEvents/blob/master/LICENSE</PackageLicenseUrl>
-    <Description>FluentEvents is a framework that lets you persist and manage event subscriptions when using Dependency Injection and ORMs</Description>
+    <Description>FluentEvents is an event aggregation framework that lets you persist and manage event subscriptions when using Dependency Injection and ORMs</Description>
     <PackageProjectUrl>https://github.com/luca-esse/FluentEvents</PackageProjectUrl>
+    <Tags>event-aggregator events</Tags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
