--- a/src/FluentEvents/FluentEvents.csproj
+++ b/src/FluentEvents/FluentEvents.csproj
@@ -7,7 +7,7 @@
     <PackageLicenseUrl>https://github.com/luca-esse/FluentEvents/blob/master/LICENSE</PackageLicenseUrl>
     <Description>FluentEvents is an event aggregation framework that lets you persist and manage event subscriptions when using Dependency Injection and ORMs</Description>
     <PackageProjectUrl>https://github.com/luca-esse/FluentEvents</PackageProjectUrl>
-    <PackageTags>Event aggregator;Events</PackageTags>
+    <PackageTags>EventAggregator;Events;Aggregation;Publish;Subscribe;Async</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
