--- a/src/FluentEvents.EntityFramework/FluentEvents.EntityFramework.csproj
+++ b/src/FluentEvents.EntityFramework/FluentEvents.EntityFramework.csproj
@@ -3,11 +3,17 @@
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
     <LangVersion>7.3</LangVersion>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageLicenseUrl>https://github.com/luca-esse/FluentEvents/blob/master/LICENSE</PackageLicenseUrl>
     <Description>Entity Framework 6 plugin for attaching the entities materialized from queries to a FluentEvents EventsContext automatically</Description>
-    <PackageProjectUrl>https://github.com/luca-esse/FluentEvents</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/luca-esse/FluentEvents</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageTags>EventAggregator;EntityFramework</PackageTags>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE" Pack="true" PackagePath=""/>
+  </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>FluentEvents.EntityFramework.xml</DocumentationFile>
