--- a/src/FluentEvents/FluentEvents.csproj
+++ b/src/FluentEvents/FluentEvents.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
-    <Description>FluentEvents is an event aggregation framework that lets you persist and manage event subscriptions when using Dependency Injection and ORMs</Description>
+    <Description>FluentEvents is an event aggregation framework that simplifies event subscriptions when using Dependency Injection and ORMs</Description>
     <RepositoryUrl>https://github.com/luca-esse/FluentEvents</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
