--- a/src/FluentEvents.Azure.ServiceBus/FluentEvents.Azure.ServiceBus.csproj
+++ b/src/FluentEvents.Azure.ServiceBus/FluentEvents.Azure.ServiceBus.csproj
@@ -9,6 +9,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageTags>EventAggregator;Azure;AzureServiceBus</PackageTags>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
