--- a/src/FluentEvents.EntityFramework/FluentEvents.EntityFramework.csproj
+++ b/src/FluentEvents.EntityFramework/FluentEvents.EntityFramework.csproj
@@ -9,6 +9,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageTags>EventAggregator;EntityFramework</PackageTags>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
