--- a/src/FluentEvents.Azure.SignalR/FluentEvents.Azure.SignalR.csproj
+++ b/src/FluentEvents.Azure.SignalR/FluentEvents.Azure.SignalR.csproj
@@ -9,7 +9,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageTags>EventAggregator;Azure;SignalR</PackageTags>
-    <PackageIcon>icon.png</PackageIcon>
+    <PackageIconUrl>https://raw.githubusercontent.com/luca-esse/FluentEvents/master/src/FluentEvents.Azure.SignalR/icon.png</PackageIconUrl>
   </PropertyGroup>
 
   <ItemGroup>
