--- a/samples/WorkerSample/WorkerSample/WorkerSample.csproj
+++ b/samples/WorkerSample/WorkerSample/WorkerSample.csproj
@@ -6,13 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentEvents" Version="2.6.2" />
-    <PackageReference Include="FluentEvents.EntityFrameworkCore" Version="2.6.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WorkerSample.DomainModel\WorkerSample.DomainModel.csproj" />
+    <ProjectReference Include="..\WorkerSample.Events\WorkerSample.Events.csproj" />
+    <ProjectReference Include="..\WorkerSample.Notifications\WorkerSample.Notifications.csproj" />
+    <ProjectReference Include="..\WorkerSample.Repositories\WorkerSample.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
