--- a/src/FluentEvents.EntityFrameworkCore/FluentEvents.EntityFrameworkCore.csproj
+++ b/src/FluentEvents.EntityFrameworkCore/FluentEvents.EntityFrameworkCore.csproj
@@ -25,6 +25,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConfigureAwaitChecker.Analyzer" Version="3.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FluentEvents\FluentEvents.csproj" />
   </ItemGroup>
 
