--- a/src/FluentEvents/FluentEvents.csproj
+++ b/src/FluentEvents/FluentEvents.csproj
@@ -3,12 +3,14 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
-    <Description>FluentEvents is an event aggregation framework that simplifies event subscriptions when using Dependency Injection and ORMs</Description>
+    <Description>
+      FluentEvents is an event aggregation framework for implementing domain events and integration events in DDD applications.
+    </Description>
     <RepositoryUrl>https://github.com/luca-esse/FluentEvents</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageTags>EventAggregator;Event;Aggregation;Publish;Subscribe;Async</PackageTags>
+    <PackageTags>DomainEvents;EventAggregator;Domain;Aggregation;Event;</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/luca-esse/FluentEvents/master/src/FluentEvents/icon.png</PackageIconUrl>
   </PropertyGroup>
 
