Update package tags

--- a/src/FluentEvents.Azure.SignalR/FluentEvents.Azure.SignalR.csproj
+++ b/src/FluentEvents.Azure.SignalR/FluentEvents.Azure.SignalR.csproj
@@ -8,7 +8,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageTags>EventAggregator;Azure;SignalR</PackageTags>
+    <PackageTags>SignalR;DomainEvents;EventAggregator;Domain;Aggregation;Event</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/luca-esse/FluentEvents/master/src/FluentEvents.Azure.SignalR/icon.png</PackageIconUrl>
   </PropertyGroup>
 
