--- a/samples/AspNetCoreApiSample/AspNetCoreApiSample.Events/AspNetCoreApiSample.Events.csproj
+++ b/samples/AspNetCoreApiSample/AspNetCoreApiSample.Events/AspNetCoreApiSample.Events.csproj
@@ -6,8 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="AsyncEvent" Version="0.2.0" />
-    <PackageReference Include="FluentEvents" Version="2.6.5" />
-    <PackageReference Include="FluentEvents.EntityFrameworkCore" Version="2.6.5" />
+    <PackageReference Include="FluentEvents" Version="3.1.1-beta" />
+    <PackageReference Include="FluentEvents.EntityFrameworkCore" Version="3.1.1-beta" />
   </ItemGroup>
 
   <ItemGroup>
