--- a/samples/WorkerSample/WorkerSample.Events/WorkerSample.Events.csproj
+++ b/samples/WorkerSample/WorkerSample.Events/WorkerSample.Events.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentEvents" Version="2.6.5" />
-    <PackageReference Include="FluentEvents.EntityFrameworkCore" Version="2.6.5" />
+    <PackageReference Include="FluentEvents" Version="3.1.1-beta" />
+    <PackageReference Include="FluentEvents.EntityFrameworkCore" Version="3.1.1-beta" />
   </ItemGroup>
 
   <ItemGroup>
