Rename DomainModel projects to Domain

--- a/samples/AspNetCoreApiSample/AspNetCoreApiSample.Events/AspNetCoreApiSample.Events.csproj
+++ b/samples/AspNetCoreApiSample/AspNetCoreApiSample.Events/AspNetCoreApiSample.Events.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AspNetCoreApiSample.DomainModel\AspNetCoreApiSample.DomainModel.csproj" />
+    <ProjectReference Include="..\AspNetCoreApiSample.Domain\AspNetCoreApiSample.Domain.csproj" />
   </ItemGroup>
 
 </Project>
