--- a/samples/AzureSignalRSample/AzureSignalRSample.Web/AzureSignalRSample.Web.csproj
+++ b/samples/AzureSignalRSample/AzureSignalRSample.Web/AzureSignalRSample.Web.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AzureSignalRSample.DomainModel\AzureSignalRSample.DomainModel.csproj" />
+    <ProjectReference Include="..\AzureSignalRSample.Domain\AzureSignalRSample.Domain.csproj" />
     <ProjectReference Include="..\AzureSignalRSample.Events\AzureSignalRSample.Events.csproj" />
     <ProjectReference Include="..\AzureSignalRSample.Persistence\AzureSignalRSample.Persistence.csproj" />
     <ProjectReference Include="..\AzureSignalRSample.Query\AzureSignalRSample.Query.csproj" />
