--- a/samples/AspNetCoreApiSample/AspNetCoreApiSample.Api/AspNetCoreApiSample.Api.csproj
+++ b/samples/AspNetCoreApiSample/AspNetCoreApiSample.Api/AspNetCoreApiSample.Api.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AspNetCoreApiSample.DomainModel\AspNetCoreApiSample.DomainModel.csproj" />
+    <ProjectReference Include="..\AspNetCoreApiSample.Domain\AspNetCoreApiSample.Domain.csproj" />
     <ProjectReference Include="..\AspNetCoreApiSample.Events\AspNetCoreApiSample.Events.csproj" />
     <ProjectReference Include="..\AspNetCoreApiSample.Notifications\AspNetCoreApiSample.Notifications.csproj" />
     <ProjectReference Include="..\AspNetCoreApiSample.Repositories\AspNetCoreApiSample.Repositories.csproj" />
