--- a/src/FluentEvents/FluentEvents.csproj
+++ b/src/FluentEvents/FluentEvents.csproj
@@ -3,9 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
-    <Description>
-      FluentEvents is an event aggregation framework for implementing domain events and integration events in DDD applications.
-    </Description>
+    <Description>FluentEvents is an event aggregation framework for implementing domain events and integration events in DDD applications.</Description>
     <RepositoryUrl>https://github.com/luca-esse/FluentEvents</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
