Update Copyright/Author info

--- a/src/FluentEvents.EntityFrameworkCore/FluentEvents.EntityFrameworkCore.csproj
+++ b/src/FluentEvents.EntityFrameworkCore/FluentEvents.EntityFrameworkCore.csproj
@@ -10,6 +10,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageTags>EntityFramework;DomainEvents;EventAggregator;Domain;Aggregation;Event</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/luca-esse/FluentEvents/master/src/FluentEvents.EntityFrameworkCore/icon.png</PackageIconUrl>
+    <Authors>Luca Schiavone</Authors>
+    <Copyright>Copyright (c) 2018 Luca Schiavone</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
