--- a/src/FluentEvents/FluentEvents.csproj
+++ b/src/FluentEvents/FluentEvents.csproj
@@ -10,6 +10,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageTags>DomainEvents;EventAggregator;Domain;Aggregation;Event;</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/luca-esse/FluentEvents/master/src/FluentEvents/icon.png</PackageIconUrl>
+    <Authors>Luca Schiavone</Authors>
+    <Copyright>Copyright (c) 2018 Luca Schiavone</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
