--- a/samples/AzureSignalRSample/AzureSignalRSample.Worker/AzureSignalRSample.Worker.csproj
+++ b/samples/AzureSignalRSample/AzureSignalRSample.Worker/AzureSignalRSample.Worker.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AzureSignalRSample.Application\AzureSignalRSample.Application.csproj" />
     <ProjectReference Include="..\AzureSignalRSample.Domain\AzureSignalRSample.Domain.csproj" />
     <ProjectReference Include="..\AzureSignalRSample.Events\AzureSignalRSample.Events.csproj" />
     <ProjectReference Include="..\AzureSignalRSample.Persistence\AzureSignalRSample.Persistence.csproj" />
