--- a/samples/AzureSignalRSample/AzureSignalRSample.Application/AzureSignalRSample.Application.csproj
+++ b/samples/AzureSignalRSample/AzureSignalRSample.Application/AzureSignalRSample.Application.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AzureSignalRSample.Domain\AzureSignalRSample.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
