--- a/samples/AzureSignalRSample/AzureSignalRSample.Repositories/AzureSignalRSample.Repositories.csproj
+++ b/samples/AzureSignalRSample/AzureSignalRSample.Repositories/AzureSignalRSample.Repositories.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AzureSignalRSample.Application\AzureSignalRSample.Application.csproj" />
     <ProjectReference Include="..\AzureSignalRSample.Domain\AzureSignalRSample.Domain.csproj" />
     <ProjectReference Include="..\AzureSignalRSample.Persistence\AzureSignalRSample.Persistence.csproj" />
   </ItemGroup>
