--- a/samples/WorkerSample/WorkerSample.Events/WorkerSample.Events.csproj
+++ b/samples/WorkerSample/WorkerSample.Events/WorkerSample.Events.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WorkerSample.Domain\WorkerSample.Domain.csproj" />
+    <ProjectReference Include="..\WorkerSample.Notifications\WorkerSample.Notifications.csproj" />
   </ItemGroup>
 
 </Project>
