--- a/samples/WorkerSample/WorkerSample.Worker/WorkerSample.Worker.csproj
+++ b/samples/WorkerSample/WorkerSample.Worker/WorkerSample.Worker.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WorkerSample.Application\WorkerSample.Application.csproj" />
     <ProjectReference Include="..\WorkerSample.Domain\WorkerSample.Domain.csproj" />
     <ProjectReference Include="..\WorkerSample.Events\WorkerSample.Events.csproj" />
     <ProjectReference Include="..\WorkerSample.Notifications\WorkerSample.Notifications.csproj" />
