--- a/samples/AspNetCoreApiSample/AspNetCoreApiSample.Repositories/AspNetCoreApiSample.Repositories.csproj
+++ b/samples/AspNetCoreApiSample/AspNetCoreApiSample.Repositories/AspNetCoreApiSample.Repositories.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AspNetCoreApiSample.Application\AspNetCoreApiSample.Application.csproj" />
     <ProjectReference Include="..\AspNetCoreApiSample.Domain\AspNetCoreApiSample.Domain.csproj" />
     <ProjectReference Include="..\AspNetCoreApiSample.Events\AspNetCoreApiSample.Events.csproj" />
   </ItemGroup>
