Move event handling to Application

--- a/samples/WorkerSample/WorkerSample.Events/WorkerSample.Events.csproj
+++ b/samples/WorkerSample/WorkerSample.Events/WorkerSample.Events.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WorkerSample.Application\WorkerSample.Application.csproj" />
     <ProjectReference Include="..\WorkerSample.Domain\WorkerSample.Domain.csproj" />
-    <ProjectReference Include="..\WorkerSample.Notifications\WorkerSample.Notifications.csproj" />
   </ItemGroup>
 
 </Project>
