--- a/samples/WorkerSample/WorkerSample.Application/WorkerSample.Application.csproj
+++ b/samples/WorkerSample/WorkerSample.Application/WorkerSample.Application.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentEvents" Version="3.1.1-beta" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WorkerSample.Domain\WorkerSample.Domain.csproj" />
   </ItemGroup>
 
