Rework topic subscription management

--- a/src/FluentEvents.Azure.ServiceBus.IntegrationTests/FluentEvents.Azure.ServiceBus.IntegrationTests.csproj
+++ b/src/FluentEvents.Azure.ServiceBus.IntegrationTests/FluentEvents.Azure.ServiceBus.IntegrationTests.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\FluentEvents.IntegrationTests.Common\FluentEvents.IntegrationTests.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="testsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
