--- a/src/FluentEvents.Azure.ServiceBus/FluentEvents.Azure.ServiceBus.csproj
+++ b/src/FluentEvents.Azure.ServiceBus/FluentEvents.Azure.ServiceBus.csproj
@@ -16,10 +16,12 @@
 
   <ItemGroup>
     <None Include="..\..\LICENSE" Pack="true" PackagePath="" />
+    <None Include="..\..\FluentEvents.ruleset" Pack="false" PackagePath="" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>FluentEvents.Azure.ServiceBus.xml</DocumentationFile>
+    <CodeAnalysisRuleSet>..\..\FluentEvents.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
