--- a/src/FluentEvents.IntegrationTests/FluentEvents.IntegrationTests.csproj
+++ b/src/FluentEvents.IntegrationTests/FluentEvents.IntegrationTests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Moq" Version="4.12.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
