--- a/samples/AzureSignalRSample/AzureSignalRSample.Domain/AzureSignalRSample.Domain.csproj
+++ b/samples/AzureSignalRSample/AzureSignalRSample.Domain/AzureSignalRSample.Domain.csproj
@@ -5,4 +5,8 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentEvents" Version="2019.7.19.2" />
+  </ItemGroup>
+
 </Project>
