--- a/samples/AzureSignalRSample/AzureSignalRSample.Events/AzureSignalRSample.Events.csproj
+++ b/samples/AzureSignalRSample/AzureSignalRSample.Events/AzureSignalRSample.Events.csproj
@@ -6,9 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentEvents" Version="3.1.1-beta" />
-    <PackageReference Include="FluentEvents.Azure.SignalR" Version="3.1.1-beta" />
-    <PackageReference Include="FluentEvents.EntityFrameworkCore" Version="3.1.1-beta" />
+    <PackageReference Include="FluentEvents.Azure.SignalR" Version="2019.7.19.2" />
+    <PackageReference Include="FluentEvents.EntityFrameworkCore" Version="2019.7.19.2" />
   </ItemGroup>
 
   <ItemGroup>
