--- a/samples/AzureSignalRSample/AzureSignalRSample.Worker/AzureSignalRSample.Worker.csproj
+++ b/samples/AzureSignalRSample/AzureSignalRSample.Worker/AzureSignalRSample.Worker.csproj
@@ -33,9 +33,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AzureSignalRSample.Application\AzureSignalRSample.Application.csproj" />
     <ProjectReference Include="..\AzureSignalRSample.Domain\AzureSignalRSample.Domain.csproj" />
-    <ProjectReference Include="..\AzureSignalRSample.Events\AzureSignalRSample.Events.csproj" />
-    <ProjectReference Include="..\AzureSignalRSample.Persistence\AzureSignalRSample.Persistence.csproj" />
-    <ProjectReference Include="..\AzureSignalRSample.Repositories\AzureSignalRSample.Repositories.csproj" />
+    <ProjectReference Include="..\AzureSignalRSample.Infrastructure\AzureSignalRSample.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
