--- a/samples/AzureSignalRSample/AzureSignalRSample.Persistence/AzureSignalRSample.Persistence.csproj
+++ b/samples/AzureSignalRSample/AzureSignalRSample.Persistence/AzureSignalRSample.Persistence.csproj
@@ -13,7 +13,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AzureSignalRSample.Domain\AzureSignalRSample.Domain.csproj" />
-    <ProjectReference Include="..\AzureSignalRSample.Events\AzureSignalRSample.Events.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
