--- a/samples/AzureSignalRSample/AzureSignalRSample.Web/AzureSignalRSample.Web.csproj
+++ b/samples/AzureSignalRSample/AzureSignalRSample.Web/AzureSignalRSample.Web.csproj
@@ -20,10 +20,8 @@
   <ItemGroup>
     <ProjectReference Include="..\AzureSignalRSample.Application\AzureSignalRSample.Application.csproj" />
     <ProjectReference Include="..\AzureSignalRSample.Domain\AzureSignalRSample.Domain.csproj" />
-    <ProjectReference Include="..\AzureSignalRSample.Events\AzureSignalRSample.Events.csproj" />
-    <ProjectReference Include="..\AzureSignalRSample.Persistence\AzureSignalRSample.Persistence.csproj" />
+    <ProjectReference Include="..\AzureSignalRSample.Infrastructure\AzureSignalRSample.Infrastructure.csproj" />
     <ProjectReference Include="..\AzureSignalRSample.Query\AzureSignalRSample.Query.csproj" />
-    <ProjectReference Include="..\AzureSignalRSample.Repositories\AzureSignalRSample.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
